# aleo-setup-redeem

./: Cargo.toml  LICENSE.md  README.md  index.html  script.mjs
.github/workflows/: deploy-github-pages.yml
src/: lib.rs
